--- a/_layouts/home-default.html
+++ b/_layouts/home-default.html
@@ -29,7 +29,7 @@
 								<ul>
 									<li><a href="#">Intros</a></li>
 									<li><a href="left-sidebar.html">Selected Publications</a></li>
-									<li class="break"><a href="#">Students</a></li>
+									<li class="break"><a href="students.html">Students</a></li>
 									<li><a href="#">Researches</a></li>
 									<li><a href="#">Contact</a></li>
 								</ul>
