--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,11 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="#">Intros</a></li>
+									<li><a href="#"></a></li>
 									<li><a href="left-sidebar.html">Selected Publications</a></li>
-									<li class="break"><a href="#">Students</a></li>
-									<li><a href="#">Researches</a></li>
-									<li><a href="#">Contact</a></li>
+									<li class="break"><a href="students.html">Students</a></li>
+									<li><a href="#"></a></li>
+									<li><a href="#"></a></li>
 								</ul>
 							</nav>
 					</div>
