--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1999,8 +1999,8 @@
 			left: -1000%;
 			top: 0;
 			z-index: 1;
-			box-shadow: inset 0px 0px 0px 1px #e8e8e8;
-			background: #f6f8fb url("images/image-wrapper.svg");
+			/*box-shadow: inset 0px 0px 0px 1px #e8e8e8;
+			background: #f6f8fb url("images/image-wrapper.svg");*/
 		}
 
 		.image-wrapper p {
