--- a/_layouts/home-default.html
+++ b/_layouts/home-default.html
@@ -27,7 +27,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="right-sidebar.html"></a>Right-sidbar</li>
+									<li><a href="projects.html"></a>Projects</li>
 									<li><a href="left-sidebar.html">Selected Publications</a></li>
 									<li class="break"><a href="students.html">Students</a></li>
 									<li><a href="#"></a></li>
