--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 								<ul>
 									<li><a href="projects.html">Projects</a></li>
 									<li><a href="left-sidebar.html">Selected Publications</a></li>
-									<li class="break"><a href="students.html">Students</a></li>
+									<li class="break"><a href="people.html">People</a></li>
 									<li><a href="#"></a></li>
 									<li><a href="#"></a></li>
 								</ul>
