--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
 							<nav id="nav">
 								<ul>
 									<li><a href="projects.html">Projects</a></li>
-									<li><a href="left-sidebar.html">Selected Publications</a></li>
+									<li><a href="left-sidebar.html">Publications</a></li>
 									<li class="break"><a href="people.html">People</a></li>
-									<li><a href="#"></a></li>
+									<li><a href="group-seminar.html">Group Seminar</a></li>
 									<li><a href="#"></a></li>
 								</ul>
 							</nav>
