--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,71 +1,33 @@
-<!DOCTYPE HTML>
-<!--
-	Telephasic by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>SiLiu Group</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body class="left-sidebar">
-		<div id="page-wrapper">
 
-			<!-- Header -->
-				<div id="header-wrapper">
-					<div id="header" class="container">
-
-						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Liu Si</a></h1>
-
-						<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									<li><a href="projects.html">Projects</a></li>
-									<li><a href="left-sidebar.html">Publications</a></li>
-									<li class="break"><a href="people.html">People</a></li>
-									<li><a href="group-seminar.html">Group Seminar</a></li>
-									<li><a href="#"></a></li>
-								</ul>
-							</nav>
-					</div>
-				</div>
-
-				<div class="wrapper">
-					<div class="container">
-
-						{{ content }}
-						
-					</div>
-				</div>
+  {% include head.html %}
 
 
+  {% if site.theme_mode == 'markdown' %}
+  <body class="hack">
+  {% elsif site.theme_mode == 'standard' %}
+  <body class="standard">
+  {% elsif site.theme_mode == 'dark' %}
+  <body class="hack dark">
+  {% endif %}
 
-			<!-- Footer -->
-				<div id="footer-wrapper">
-					<div id="copyright" class="container">
-						<ul class="menu">
-							<li>&copy; 2016. All rights reserved.</li>
-						</ul>
-					</div>
-				</div>
+    <!--{% include github-ribbon.html %}-->
 
-		</div>
+    <div class="container">
+      <div class="grid">
+        <aside class="cell -3of12" role="navigation">
+          {% include navigation.html %}
+        </aside>
 
-		<!-- Scripts -->
+        <main class="cell -9of12">
+          {{ content }}
+        </main>
+      </div>
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+    {% include footer.html %}
 
-	</body>
+    </div>
+  </body>
+
 </html>
