--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,12 @@
 
     <div class="container">
       <div class="grid">
-        <aside class="cell -3of12" role="navigation">
+        <aside class="cell -2of12" role="navigation">
           {% include navigation.html %}
         </aside>
 
+        <div class = "cell -1of12" >
+        </div>
         <main class="cell -9of12">
           {{ content }}
         </main>
@@ -29,5 +31,4 @@
 
     </div>
   </body>
-
 </html>
