--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!--<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Amaranth" />-->
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Artifika" />
+
   <link rel="stylesheet" href="/css/prism.css">
   <link rel="stylesheet" href="/css/index.css">
 
