--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <div class="t-hackcss-navigation">
-  <h2>Menu</h2>
+  <h2>S-Lab</h2>
 
   <nav class="menu" role="menubar">
     {% assign url = page.url|remove:'index.html' %}
