--- a/css/layout.css
+++ b/css/layout.css
@@ -1,16 +1,16 @@
-/*======= index-1.html =======*/
+/*======= about.html =======*/
 
 #page2 .col-1 {width: 317px; padding: 0 51px 0 0;}
 #page2 .col-2 {width: 333px;}
 
-/*======= index-2.html =======*/
+/*======= people.html =======*/
 
 #page3 .col-1 {width: 145px; padding: 0 15px 41px 0;}
 #page3 .col-2 {width: 125px; padding: 0 15px 41px 0;}
 #page3 .col-3 {width: 185px; padding: 0 15px 41px 0;}
 #page3 .col-4 {width: 201px; padding: 0 0 41px 0;}
 
-/*======= index-5.html =======*/
+/*======= seminar.html =======*/
 
 #page6 .row-1 .col-1 {width: 227px; padding: 5px 19px 0 0;}
 #page6 .row-1 .col-2 {width: 206px; padding: 0 5px 43px 0;}
